kubernetes/apps/hello/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  annotations:
    linkerd.io/inject: enabled
