kubernetes/apps/hello/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-v2
  template:
    metadata:
      labels:
        app: hello-v2
    spec:
      containers:
        - name: hello
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
