kubernetes/apps/hello/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-v2
  namespace: hello
spec:
  selector:
    app: hello-v2
  ports:
    - port: 80
      targetPort: 80
